Header section Done 👍

--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
         </div>
     </nav>
     <!-- Navbar End -->
-    <header></header>
+    <!-- Header section -->
+    <header>
+        <div class="container header-section flex">
+            <div class="header-left">
+                <h1>Design Confidently</h1>
+                <p>UsabilityHub is a remote user research platform that takes the guesswork out of design decisions by
+                    validating them with real users.</p>
+                <a href="#" class="primary-button ">Get Started</a>
+            </div>
+            <div class="header-right">
+                <img src="./IMG/asset 2.jpeg" alt="hero image">
+            </div>
+        </div>
+    </header>
+    <!-- Header section End-->
     <section class="compsnies-section"></section>
     <section class="features-section"></section>
     <section class="big-features-sectiion"></section>
