Companies Section is done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,24 @@
         </div>
     </header>
     <!-- Header section End-->
-    <section class="compsnies-section"></section>
+
+    <!-- Companies Section -->
+    <section class="companies-section">
+        <div class="container">
+            <div class="small-bold-text companies-header">The world's best companies rely on UsabilityHub to make better
+                design decisions</div>
+            <div class="logos flex">
+                <img src="./IMG/asset 3.png" alt="" class="logo">
+                <img src="./IMG/asset 4.png" alt="" class="logo">
+                <img src="./IMG/asset 5.png" alt="" class="logo">
+                <img src="./IMG/asset 6.png" alt="" class="logo">
+                <img src="./IMG/asset 7.png" alt="" class="logo">
+                <img src="./IMG/asset 8.svg" alt="" class="logo">
+                <img src="./IMG/asset 9.png" alt="" class="logo">
+            </div>
+        </div>
+    </section>
+    <!-- Companies Section End-->
     <section class="features-section"></section>
     <section class="big-features-sectiion"></section>
     <section class="big-features-sectiion"></section>
