--- a/index.html
+++ b/index.html
@@ -68,7 +68,55 @@
         </div>
     </section>
     <!-- Companies Section End-->
-    <section class="features-section"></section>
+
+    <!-- Features Section -->
+    <section class="features-section">
+        <div class="container">
+            <div class="features-header">
+                <h2>Your user research Swiss Army Knife</h2>
+                <a href="#" class="secondary-button">See all features <i class="fa-solid fa-right-long"></i></a>
+            </div>
+            <div class="features-area flex">
+                <div class="features-card flex">
+                    <img src="./IMG/asset 11.svg" alt="">
+                    <h3>card sorting</h3>
+                    <p>Discover how people group and label information.</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./IMG/asset 13.svg" alt="">
+                    <h3>Prototype tests</h3>
+                    <p>Discover how people navigate your Figma prototypes.</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./IMG/asset 14.svg" alt="">
+                    <h3>First click tests</h3>
+                    <p>Test interaction with first click and navigation tests.</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./IMG/asset 15.svg" alt="">
+                    <h3>Design surveys</h3>
+                    <p>Get feedback on images, videos of audio files.</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./IMG/asset 16.svg" alt="">
+                    <h3>Preference tests</h3>
+                    <p>Find out which designs users prefer and why.</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+                <div class="features-card flex">
+                    <img src="./IMG/asset 17.svg" alt="">
+                    <h3>Five second tests</h3>
+                    <p>Test comprehensibility by measuring first impressions</p>
+                    <a href="#" class="secondary-button">Learn More<i class="fa-solid fa-right-long"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Features Section End-->
     <section class="big-features-sectiion"></section>
     <section class="big-features-sectiion"></section>
     <section class="big-features-sectiion"></section>
