Big Features Section is done

--- a/index.html
+++ b/index.html
@@ -117,9 +117,48 @@
         </div>
     </section>
     <!-- Features Section End-->
-    <section class="big-features-sectiion"></section>
-    <section class="big-features-sectiion"></section>
-    <section class="big-features-sectiion"></section>
+
+    <!-- Big Features Section -->
+    <section class="big-features-section">
+        <div class="container flex big-features-container">
+            <div class="feature-img">
+                <img src="./IMG/asset 18.png" alt="">
+            </div>
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users</p>
+            </div>
+        </div>
+    </section>
+    <section class="big-features-section">
+        <div class="container flex big-features-container" style="flex-direction: row-reverse;">
+            <div class="feature-img">
+                <img src="./IMG/asset 21.png" alt="">
+            </div>
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users</p>
+            </div>
+        </div>
+    </section>
+    <section class="big-features-section">
+        <div class="container flex big-features-container">
+            <div class="feature-img">
+                <img src="./IMG/asset 24.png" alt="">
+            </div>
+            <div class="feature-desc flex">
+                <h4>Effortless validation for</h4>
+                <h3>Design professionals</h3>
+                <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful
+                    experiences for your users</p>
+            </div>
+        </div>
+    </section>
+    <!-- Big Features Section End -->
     <section class="examples-section"></section>
     <section class="cta-section"></section>
 
