--- a/index.html
+++ b/index.html
@@ -159,7 +159,31 @@
         </div>
     </section>
     <!-- Big Features Section End -->
-    <section class="examples-section"></section>
+
+    <!-- Examples Section -->
+    <section class="examples-section">
+        <div class="container">
+            <div class="examples-header flex">
+                <h2>One platform, endless possibilities</h2>
+                <a href="#" class="secondary-button">See more examples<i class="fa-solid fa-right-long"></i></a>
+            </div>
+            <div class="examples-area flex">
+                <a href="#" class="examples-card">
+                    <h3>can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="examples-card">
+                    <h3>can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="examples-card">
+                    <h3>can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="examples-card">
+                    <h3>can users complete a task in my software interface?</h3>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- Examples Section End-->
     <section class="cta-section"></section>
 
     <footer></footer>
