cta Section is done

--- a/index.html
+++ b/index.html
@@ -184,7 +184,15 @@
         </div>
     </section>
     <!-- Examples Section End-->
-    <section class="cta-section"></section>
+    <!-- cta Section -->
+    <section class="cta-section">
+        <div class="container flex cta-section-container">
+            <h2>start testing today</h2>
+            <p>Take the guesswork out of design decisions</p>
+            <a href="#" class="primary-button">Get Started</a>
+        </div>
+    </section>
+    <!-- cta Section End-->
 
     <footer></footer>
     <div class="subfooter"></div>
