footer & subfooter is done

--- a/index.html
+++ b/index.html
@@ -194,8 +194,52 @@
     </section>
     <!-- cta Section End-->
 
-    <footer></footer>
-    <div class="subfooter"></div>
+    <!-- footer -->
+
+    <footer>
+        <div class="container flex footer-container">
+            <a href="#" class="company-logo">
+                <img src="./IMG/asset 1.png" alt="company logo">
+                <div class="link-column flex">
+                    <h4>Product</h4>
+                    <a href="#" class="hover-link">Overview</a>
+                    <a href="#" class="hover-link">Pricing</a>
+                    <a href="#" class="hover-link">Usability</a>
+                    <a href="#" class="hover-link">Customers Page</a>
+                    <a href="#" class="hover-link">Status Page</a>
+                </div>
+                <div class="link-column flex">
+                    <h4>Methodology</h4>
+                    <a href="#" class="hover-link">Overview</a>
+                    <a href="#" class="hover-link">Pricing</a>
+                    <a href="#" class="hover-link">Usability</a>
+                    <a href="#" class="hover-link">Customers Page</a>
+                    <a href="#" class="hover-link">Status Page</a>
+                </div>
+                <div class="link-column flex">
+                    <h4>Resources</h4>
+                    <a href="#" class="hover-link">Overview</a>
+                    <a href="#" class="hover-link">Pricing</a>
+                    <a href="#" class="hover-link">Usability</a>
+                    <a href="#" class="hover-link">Customers Page</a>
+                    <a href="#" class="hover-link">Status Page</a>
+                </div>
+            </a>
+        </div>
+    </footer>
+
+    <!-- subfooter -->
+
+    <div class="subfooter">
+        <div class="container flex subfooter-container">
+            <a class="hover-link" href="#">Privacy policy</a>
+            <a class="hover-link" href="#">Terms & Condition</a>
+            <a class="hover-link" href="#">Security Information</a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </div>
+    <!-- subfooter end-->
 
 
 
