Responsive is done

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li><a href="#" class="hover-link primary-button">Sign up</a></li>
                 </ul>
             </div>
+            <a href="#" class="nav-toggle hover-link">
+                <i class="fa-solid fa-bars"></i>
+            </a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -133,7 +136,7 @@
         </div>
     </section>
     <section class="big-features-section">
-        <div class="container flex big-features-container" style="flex-direction: row-reverse;">
+        <div class="container flex big-features-container" id="second-big-features">
             <div class="feature-img">
                 <img src="./IMG/asset 21.png" alt="">
             </div>
@@ -228,7 +231,7 @@
         </div>
     </footer>
 
-    <!-- subfooter -->
+    <!-- sub footer -->
 
     <div class="subfooter">
         <div class="container flex subfooter-container">
@@ -239,7 +242,7 @@
             <a class="hover-link" href="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </div>
-    <!-- subfooter end-->
+    <!-- sub footer end-->
 
 
 
